Fixed invisible placeholder

--- a/ui/src/styles/_angular-material2.scss
+++ b/ui/src/styles/_angular-material2.scss
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "colors";
 
 .mat-autocomplete-panel {
   width: 320px;
@@ -9,5 +10,5 @@
 }
 
 .mat-input-element::placeholder {
-  color: red;
+  color: $secondaryTextColor !important;
 }
